--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ image: assets/images/lights.png
 <p id="chilly"></p>
 <br>
 <h2>Real Hot Chilly Pixels — Приключение от первого лица.</h2>
-<div align="center"><img src="./Nikita Martyushevsky_files/SCREENS.jpg" width="1280"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/SCREENS.jpg" width="1280"></div>
 Можно запустить демо <a href="https://martyushevsky.github.io/Portfolio/RealHotChillyPixels_WebGL/index.html">Real Hot Chilly Pixels</a><br>
 <br>
   <ul>
@@ -27,15 +27,15 @@ image: assets/images/lights.png
    <li>Работу с аудиомикшером, настройку источников звука.</li>
   </ul>  
 <div align="center">
-<img src="./Nikita Martyushevsky_files/SCREENS8.jpg" width="570">&nbsp;
-<img src="./Nikita Martyushevsky_files/SCREENS10.jpg" width="570"><br>
-<img src="./Nikita Martyushevsky_files/lightprobes.gif" width="480"><br>
-<img src="./Nikita Martyushevsky_files/SCREENS0.jpg" width="570">&nbsp;
-<img src="./Nikita Martyushevsky_files/SCREENS3.jpg" width="570"><br>
-<img src="./Nikita Martyushevsky_files/SCREENS4.jpg" width="570">&nbsp;
-<img src="./Nikita Martyushevsky_files/SCREENS6.jpg" width="570"><br>
-<img src="./Nikita Martyushevsky_files/SCREENS7.jpg" width="570">&nbsp;
-<img src="./Nikita Martyushevsky_files/SCREENS5.jpg" width="570"><br>
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/SCREENS8.jpg" width="570">&nbsp;
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/SCREENS10.jpg" width="570"><br>
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/lightprobes.gif" width="480"><br>
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/SCREENS0.jpg" width="570">&nbsp;
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/SCREENS3.jpg" width="570"><br>
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/SCREENS4.jpg" width="570">&nbsp;
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/SCREENS6.jpg" width="570"><br>
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/SCREENS7.jpg" width="570">&nbsp;
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/SCREENS5.jpg" width="570"><br>
 </div>
 <br>
 <p>
@@ -45,7 +45,7 @@ image: assets/images/lights.png
 Если здоровье бота падает ниже определенного значения, он пытается сбежать и добраться до камеры, восстанавливающей здоровье.<br>
 </p>
 <div align="center">
-<iframe width="1280" height="720" src="./Nikita Martyushevsky_files/uUSlSHwGEnU.html" frameborder="0" allowfullscreen=""></iframe><br>
+<iframe width="1280" height="720" src="https://www.youtube.com/watch?v=Q6CZ5edIKco" frameborder="0" allowfullscreen=""></iframe><br>
 </div>
 <br>
 <p id="colors"></p>
@@ -59,7 +59,7 @@ image: assets/images/lights.png
 Со временем появляются новые ряды, сгенерированные случайным образом.<br>
 Если игрок совершил ошибку, новый ряд появляется мгновенно. Когда одна из фигур достигает верхней границы поля, игра заканчивается.<br>
 <br>
-<div align="center"><img src="./Nikita Martyushevsky_files/luckyStrike.gif"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/luckyStrike.gif"></div>
 <p id="onestep"></p>
 <br>
 <h4>One Step Closer — Раннер для VR шлема Fibrum.</h4>
@@ -70,7 +70,7 @@ image: assets/images/lights.png
 Уровень генерируется по мере продвижения игрока. Уже пройденный участок уровня, очищенный от препятствий, переносится вперед.<br>
 Таким образом память не заполняется лишними объектами.<br>
 <br>
-<div align="center"><img src="./Nikita Martyushevsky_files/oneStepCloser.gif"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/oneStepCloser.gif"></div>
 <br>
 <p id="pr"></p>
 <br>
@@ -88,32 +88,32 @@ NavMesh работает только в 3D проектах. В ассет ст
 Был реализован автоматический способ создания битовой карты для уже существующих уровней.<br>
 Но получение пути это только половина задачи, его еще нужно пройти. Для этого был создан контроллер перемещения бота, учитывающий особенности строения уровней.<br>
 <br>
-<div align="center"><img src="./Nikita Martyushevsky_files/prPath2.gif" width="570"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prPath2.gif" width="570"></div>
 <br>
 Персонаж может отталкиваться от стен и выполнять двойной прыжок.<br>
 <br>
-<div align="center"><img src="./Nikita Martyushevsky_files/prJumps.gif" width="570">
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prJumps.gif" width="570">
 </div>
 <br>
 Безопасная зона со временем сужается.<br>
 <br>
-<div align="center"><img src="./Nikita Martyushevsky_files/prZone.gif" width="570">
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prZone.gif" width="570">
 </div>
 <br>
 Стрельба реализована посредством рейкастов, с учетом влияния гравитации.<br>
 Траектория выстрела всегда известна. Снаряды реалистично рикошетят от препятствий.<br>
 <br>
 <div align="center">
-<img src="./Nikita Martyushevsky_files/prBullets.gif" width="570">&nbsp;
-<img src="./Nikita Martyushevsky_files/prBulletsFireworks.gif" width="570"><br>
-<!--<img src="./Nikita Martyushevsky_files/prBullets.gif" width="1000"><br>
-<img src="./Nikita Martyushevsky_files/prBulletsFireworks.gif" width="1000">-->
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBullets.gif" width="570">&nbsp;
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBulletsFireworks.gif" width="570"><br>
+<!--<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBullets.gif" width="1000"><br>
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBulletsFireworks.gif" width="1000">-->
 </div>
 <br>
 Этот же принцип использован для предсказания траектории полета персонажа, запущенного бустер-платформой.<br>
 Благодаря этому, их легко расставлять на уровне и создавать интересные комбинации.<br>
 <br>
-<div align="center"><img src="./Nikita Martyushevsky_files/prBoosters.gif" width="1280"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/prBoosters.gif" width="1280"></div>
 <p id="unity"></p>
 <br>
 <h2>Расширение редактора Unity</h2>
@@ -122,7 +122,7 @@ NavMesh работает только в 3D проектах. В ассет ст
 Устав переименовывать каждый объект по отдельности, я добавил в редактор окно для переименования группы объектов за раз.<br>
 Требующие переименования объекты нужно сложить в корневой объект. Затем корневой объект нужно поместить в слот окошка.<br>
 <br>
-<div align="center"><img src="./Nikita Martyushevsky_files/rename.gif" width="570"></div>
+<div align="center"><img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/rename.gif" width="570"></div>
 <br>
 <br>
 <pre><code>using UnityEngine;
@@ -181,5 +181,5 @@ public class RenameObjectsWindow : EditorWindow
 <br>
 <div align="center">
 <h4>Благодарю за внимание!</h4>
-<img src="./Nikita Martyushevsky_files/allOfTheLights.gif" width="1024">
+<img src="https://raw.githubusercontent.com/Martyushevsky/Portfolio/gh-pages/assets/images/allOfTheLights.gif" width="1024">
 </div>
