--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ image: assets/images/lights.png
 <a href="#onestep">One Step Closer — Раннер для VR шлема Fibrum.</a><br>
 <a href="#pr">Platform Royale — Двумерный шутер. Командный проект. (C веб демо)</a><br>
 <a href="#unity">Расширение редактора Unity</a><br>
+<br>
 <p id="chilly"></p>
 <br>
 <h2>Real Hot Chilly Pixels — Приключение от первого лица.</h2>
@@ -45,7 +46,7 @@ image: assets/images/lights.png
 Если здоровье бота падает ниже определенного значения, он пытается сбежать и добраться до камеры, восстанавливающей здоровье.<br>
 </p>
 <div align="center">
-<iframe width="1280" height="720" src="https://www.youtube.com/watch?v=Q6CZ5edIKco" frameborder="0" allowfullscreen=""></iframe><br>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/Q6CZ5edIKco" frameborder="0" allowfullscreen=""></iframe><br>
 </div>
 <br>
 <p id="colors"></p>
