--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ image: assets/images/lights.png
 <a href="#onestep">One Step Closer — Раннер для VR шлема Fibrum.</a><br>
 <a href="#pr">Platform Royale — Двумерный шутер. Командный проект. (C веб демо)</a><br>
 <a href="#unity">Расширение редактора Unity</a><br>
-<br>
+<div></div>
 <p id="chilly"></p>
 <br>
 <h2>Real Hot Chilly Pixels — Приключение от первого лица.</h2>
